More doc updates

--- a/workshops/LPC_EFT_workshop_2025/Parameter_Fitting_with_Systematics.ipynb
+++ b/workshops/LPC_EFT_workshop_2025/Parameter_Fitting_with_Systematics.ipynb
@@ -15,10 +15,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 2,
    "id": "c0e93500-7a31-4aed-8fec-876e95144d25",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/jsandesara_umass_edu/.conda/envs/NSBI/lib/python3.11/site-packages/nsbi_common_utils/plotting.py:11: FutureWarning: ``set_style`` is deprecated: Naming convention is changing to match mpl. Use ``mplhep.style.use()``.\n",
+      "  hep.set_style(\"ATLAS\")\n",
+      "2025-06-27 14:12:03.996558: I tensorflow/core/util/port.cc:153] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
+      "2025-06-27 14:12:04.027606: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:477] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
+      "WARNING: All log messages before absl::InitializeLog() is called are written to STDERR\n",
+      "E0000 00:00:1751033524.046900 1251501 cuda_dnn.cc:8310] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
+      "E0000 00:00:1751033524.052400 1251501 cuda_blas.cc:1418] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
+      "2025-06-27 14:12:04.070862: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "To enable the following instructions: AVX2 AVX512F AVX512_VNNI FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
+     ]
+    }
+   ],
    "source": [
     "import os, sys, importlib\n",
     "\n",
@@ -52,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 3,
    "id": "2911a387-09ea-44da-ad82-f19e960a9129",
    "metadata": {},
    "outputs": [],
@@ -63,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 4,
    "id": "dfeaa3c6-560a-46fd-ac40-13ebb6877300",
    "metadata": {},
    "outputs": [
@@ -108,19 +124,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": null,
    "id": "b2b11240-e39f-43f8-971d-97a8424d7084",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_179/3818765506.py:12: FutureWarning: Series.ravel is deprecated. The underlying array is already 1D, so ravel is not necessary.  Use `to_numpy()` for conversion to a numpy array instead.\n",
-      "  weights_Asimov = jnp.array(dataset[mask_Asimov].weights.ravel())\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Load the nominal dataset for evaluation\n",
     "dataset = pd.read_hdf(f\"{saved_data}dataset_preselected_nominal_SR.h5\", key=\"dataset\", mode='r')\n",
@@ -138,18 +145,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": null,
    "id": "15158bde-85fb-4cc8-8c4d-c6fae12bfe6e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "path_to_dict_systs = f\"{saved_data}dict_systs.npy\"\n",
     "\n",
@@ -163,19 +162,59 @@
     "    with open(f\"{saved_data}hist_binned_variations.pkl\", \"rb\") as fp:\n",
     "        hist_variations = pickle.load(fp)\n",
     "else:\n",
-    "    dict_systs = {}\n",
+    "    dict_systs = {} # No systematics\n",
     "\n",
+    "# Full list of systematics\n",
+    "list_syst = [key for key in dict_systs]\n",
     "\n",
+    "print(list_syst)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5d7e989f-c6c0-416a-8bb3-454f969da639",
+   "metadata": {},
+   "source": [
+    "Parameters in the fit\n",
+    "-\n",
+    "\n",
+    "In the model we are fitting in this notebook, we introduce floating parameters associated with background normalization: \n",
+    "\n",
+    "$$\\sum_c f_c(\\mu) \\cdot \\nu_c  \\cdot \\frac{p_c\\left(x\\right)}{p_{ref}(x)} = \\mu_{higgs} \\cdot \\nu_{H \\to \\tau\\tau}(\\mu) \\cdot  \\frac{p_{H \\to \\tau\\tau}\\left(x\\right)}{p_{ref}(x)} + \\mu_{t\\bar{t}} \\cdot \\nu_{t\\bar{t}}(\\mu) \\cdot  \\frac{p_{t\\bar{t}}\\left(x\\right)}{p_{ref}(x)} + \\mu_{Z} \\cdot \\nu_{Z \\to \\tau\\tau}(\\mu) \\cdot  \\frac{p_{Z \\to \\tau\\tau}\\left(x\\right)}{p_{ref}(x)}$$\n",
+    "\n",
+    "This is reflected in the metadata from the config file, in the list of unconstrained parameters, and where each process in the model is taken to be a floating process:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e48019cd-27ca-468a-9c41-e5b15d03cfda",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Total number of unconstrained parameters in the model\n",
     "num_unconstrained_params = config[\"num_unconstrained_params\"]\n",
     "\n",
     "# List of unconstrained parameter labels\n",
     "list_unconstrained_params = config[\"list_unconstrained_params\"]\n",
     "\n",
-    "# Full list of systematics\n",
-    "list_syst = [key for key in dict_systs]\n",
+    "print(list_unconstrained_params)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c655a0d7-54a4-4bd5-961b-5bf07d7b1a66",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "process_index = config[\"process_index\"]\n",
     "\n",
-    "print(list_syst)"
+    "floating_processes    = config[\"floating_processes\"]\n",
+    "fixed_processes       = config[\"fixed_processes\"]\n",
+    "\n",
+    "print(floating_processes)\n",
+    "print(fixed_processes)"
    ]
   },
   {
@@ -208,27 +247,6 @@
     "for process_type in all_process:\n",
     "    \n",
     "    hist_channels['SR'][process_type]        = dataset[mask_processes[process_type]].weights.sum()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 72,
-   "id": "31d38dda-bc18-4c2f-aa4b-db75561d79df",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "hist_channels_data = {}\n",
-    "hist_channels_data['SR'] = np.sum([hist_channels['SR'][process_type] for process_type in process_asimov], axis=0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 73,
-   "id": "a8ae6415-7f12-4dfb-b30c-e023601aea0a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "hist_channel_variations = None"
    ]
   },
   {
@@ -274,6 +292,12 @@
    ],
    "source": [
     "# Build the \"observed\" histogram for an Asimov dataset\n",
+    "hist_channels_data = {}\n",
+    "\n",
+    "# Total observed events in the SR where we do NSBI (for extended Poisson fit)\n",
+    "hist_channels_data['SR'] = np.sum([hist_channels['SR'][process_type] for process_type in process_asimov], axis=0)\n",
+    "\n",
+    "# Observed Asimov data in all the other binned channels\n",
     "for channel in channels_binned:\n",
     "    with open(f\"{saved_data}hist_binned_{channel}.pkl\", \"rb\") as fp:\n",
     "            hist_channels[channel] = pickle.load(fp)\n",
@@ -304,38 +328,7 @@
     "\n",
     "Having processed all the inputs needed, we build the likelihood model in the `nsbi_inference` class of `common_utils/inference.py`:\n",
     "\n",
-    "$$\\frac{p(x|\\mu, \\alpha)}{p_{ref}(x)} = \\frac{1}{\\sum_c \\cdot f_c(\\mu) \\cdot \\nu_c} \\sum_c f_c(\\mu) \\cdot \\nu_c  \\cdot \\frac{p_c\\left(x\\right)}{p_{ref}(x)}$$\n",
-    "\n",
-    "In this model, we also introduce floating parameters associated with background normalization for a simultaneous background fit: \n",
-    "\n",
-    "$$\\sum_c f_c(\\mu) \\cdot \\nu_c  \\cdot \\frac{p_c\\left(x\\right)}{p_{ref}(x)} = \\mu_{higgs} \\cdot \\nu_{H \\to \\tau\\tau}(\\mu) \\cdot  \\frac{p_{H \\to \\tau\\tau}\\left(x\\right)}{p_{ref}(x)} + \\mu_{t\\bar{t}} \\cdot \\nu_{t\\bar{t}}(\\mu) \\cdot  \\frac{p_{t\\bar{t}}\\left(x\\right)}{p_{ref}(x)} + \\mu_{Z} \\cdot \\nu_{Z \\to \\tau\\tau}(\\mu) \\cdot  \\frac{p_{Z \\to \\tau\\tau}\\left(x\\right)}{p_{ref}(x)}$$\n",
-    "\n",
-    "This is reflected in the metadata from the config file, where each process in the model is taken to be a floating process:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 77,
-   "id": "28949ca9-f7b6-4733-88ce-2eb201593e74",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['htautau', 'ttbar', 'ztautau']\n",
-      "[]\n"
-     ]
-    }
-   ],
-   "source": [
-    "process_index = config[\"process_index\"]\n",
-    "\n",
-    "floating_processes    = config[\"floating_processes\"]\n",
-    "fixed_processes       = config[\"fixed_processes\"]\n",
-    "\n",
-    "print(floating_processes)\n",
-    "print(fixed_processes)"
+    "$$\\frac{p(x|\\mu, \\alpha)}{p_{ref}(x)} = \\frac{1}{\\sum_c \\cdot f_c(\\mu) \\cdot \\nu_c} \\sum_c f_c(\\mu) \\cdot \\nu_c  \\cdot \\frac{p_c\\left(x\\right)}{p_{ref}(x)}$$"
    ]
   },
   {
