--- a/workshops/LPC_EFT_workshop_2025/Neural_Likelihood_Ratio_Estimation.ipynb
+++ b/workshops/LPC_EFT_workshop_2025/Neural_Likelihood_Ratio_Estimation.ipynb
@@ -1370,9 +1370,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:.conda-NSBI]",
+   "display_name": "NSBI",
    "language": "python",
-   "name": "conda-env-.conda-NSBI-py"
+   "name": "nsbi"
   },
   "language_info": {
    "codemirror_mode": {
