Added data visualization notebook

--- a/workshops/LPC_EFT_workshop_2025/Neural_Likelihood_Ratio_Estimation.ipynb
+++ b/workshops/LPC_EFT_workshop_2025/Neural_Likelihood_Ratio_Estimation.ipynb
@@ -21,15 +21,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/jsandesara_umass_edu/.conda/envs/NSBI/lib/python3.11/site-packages/nsbi_common_utils/plotting.py:11: FutureWarning: ``set_style`` is deprecated: Naming convention is changing to match mpl. Use ``mplhep.style.use()``.\n",
+      "/data/jaySandesara/NSBI_workflow_tutorial/src/nsbi_common_utils/plotting.py:11: FutureWarning: ``set_style`` is deprecated: Naming convention is changing to match mpl. Use ``mplhep.style.use()``.\n",
       "  hep.set_style(\"ATLAS\")\n",
-      "2025-06-27 12:41:49.908336: I tensorflow/core/util/port.cc:153] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
-      "2025-06-27 12:41:51.202716: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:477] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
+      "2025-06-27 14:26:27.291780: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:477] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
       "WARNING: All log messages before absl::InitializeLog() is called are written to STDERR\n",
-      "E0000 00:00:1751028111.588618 1251211 cuda_dnn.cc:8310] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
-      "E0000 00:00:1751028111.704207 1251211 cuda_blas.cc:1418] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
-      "2025-06-27 12:41:52.910421: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
-      "To enable the following instructions: AVX2 AVX512F AVX512_VNNI FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
+      "E0000 00:00:1751034387.309425    5712 cuda_dnn.cc:8310] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
+      "E0000 00:00:1751034387.314814    5712 cuda_blas.cc:1418] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
+      "2025-06-27 14:26:27.333171: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "To enable the following instructions: AVX2 AVX512F FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
      ]
     }
    ],
@@ -179,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "a80627c5-a251-4a68-bb07-ce38f59f048b",
    "metadata": {},
    "outputs": [],
@@ -190,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "d61d461f-5f65-4e57-875e-1e85f44fe9b5",
    "metadata": {},
    "outputs": [],
@@ -207,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "d08a23c3-57df-421e-ba72-284e57e13345",
    "metadata": {},
    "outputs": [
@@ -224,7 +223,7 @@
        " 'DER_met_phi_centrality']"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -261,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "e49f5052-70f9-4e96-9d22-87c09db8a4b6",
    "metadata": {},
    "outputs": [
@@ -280,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "9d2a3392-3bd2-4a17-8dc2-e4866c342be6",
    "metadata": {},
    "outputs": [
@@ -315,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "e981440f-0a46-45ab-a04f-1d1a7cd88e27",
    "metadata": {},
    "outputs": [],
@@ -329,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "id": "4bb41ed1-e053-4882-9f9f-c35b9f1b30f4",
    "metadata": {},
    "outputs": [],
@@ -341,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "id": "88ec0ba6-b840-4d7d-a5bb-d7fca2cb946f",
    "metadata": {},
    "outputs": [],
@@ -358,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "ace064c7-94fd-458b-aab5-55d512cea983",
    "metadata": {},
    "outputs": [],
@@ -373,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "7dedd4ab-699f-4077-a678-73993e76dc36",
    "metadata": {
     "scrolled": true
@@ -383,12 +382,12 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "I0000 00:00:1751021567.775188    1719 gpu_device.cc:2022] Created device /job:localhost/replica:0/task:0/device:GPU:0 with 9615 MB memory:  -> device: 0, name: NVIDIA GeForce RTX 2080 Ti, pci bus id: 0000:3d:00.0, compute capability: 7.5\n",
+      "I0000 00:00:1751034396.113346    5712 gpu_device.cc:2022] Created device /job:localhost/replica:0/task:0/device:GPU:0 with 9615 MB memory:  -> device: 0, name: NVIDIA GeForce RTX 2080 Ti, pci bus id: 0000:3d:00.0, compute capability: 7.5\n",
       "WARNING: All log messages before absl::InitializeLog() is called are written to STDERR\n",
-      "I0000 00:00:1751021569.363521    1947 service.cc:148] XLA service 0x7fb688004d70 initialized for platform CUDA (this does not guarantee that XLA will be used). Devices:\n",
-      "I0000 00:00:1751021569.363562    1947 service.cc:156]   StreamExecutor device (0): NVIDIA GeForce RTX 2080 Ti, Compute Capability 7.5\n",
-      "2025-06-27 10:52:49.369988: I tensorflow/compiler/mlir/tensorflow/utils/dump_mlir_util.cc:268] disabling MLIR crash reproducer, set env var `MLIR_CRASH_REPRODUCER_DIRECTORY` to enable.\n",
-      "I0000 00:00:1751021569.389657    1947 cuda_dnn.cc:529] Loaded cuDNN version 90501\n"
+      "I0000 00:00:1751034397.372412    5941 service.cc:148] XLA service 0x7fc588004200 initialized for platform CUDA (this does not guarantee that XLA will be used). Devices:\n",
+      "I0000 00:00:1751034397.372442    5941 service.cc:156]   StreamExecutor device (0): NVIDIA GeForce RTX 2080 Ti, Compute Capability 7.5\n",
+      "2025-06-27 14:26:37.378575: I tensorflow/compiler/mlir/tensorflow/utils/dump_mlir_util.cc:268] disabling MLIR crash reproducer, set env var `MLIR_CRASH_REPRODUCER_DIRECTORY` to enable.\n",
+      "I0000 00:00:1751034397.397028    5941 cuda_dnn.cc:529] Loaded cuDNN version 90501\n"
      ]
     },
     {
@@ -402,7 +401,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "I0000 00:00:1751021569.664999    1947 device_compiler.h:188] Compiled cluster using XLA!  This line is logged at most once for the lifetime of the process.\n"
+      "I0000 00:00:1751034397.669078    5941 device_compiler.h:188] Compiled cluster using XLA!  This line is logged at most once for the lifetime of the process.\n"
      ]
     },
     {
@@ -444,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "1fd293b3-1669-4394-ba20-59f22f06dcd4",
    "metadata": {},
    "outputs": [
@@ -505,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "75ed41b3-18dd-4384-aa29-16ddce1719f2",
    "metadata": {},
    "outputs": [],
@@ -517,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "0d78d612-3f33-40f1-b40a-e7bd96929ad4",
    "metadata": {},
    "outputs": [
@@ -570,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "14041ee0",
    "metadata": {},
    "outputs": [],
@@ -593,6 +592,7 @@
     "                             'upper_presel': preselection_cuts.get('upper'), \n",
     "                             'lower_presel': preselection_cuts.get('lower')}}\n",
     "\n",
+    "\n",
     "dataset_channels = preselection_using_score(dataset_incl_nominal, channel_selections)\n",
     "\n",
     "del dataset_incl_nominal"
@@ -600,7 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "2c54933f-5506-4936-b867-5807e49d0566",
    "metadata": {},
    "outputs": [],
@@ -646,7 +646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "357db0b9",
    "metadata": {},
    "outputs": [
@@ -656,7 +656,7 @@
        "array([4.7001405], dtype=float32)"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -667,7 +667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "f79a063a-91a1-45ef-a4b1-ef4db7dbd7e4",
    "metadata": {},
    "outputs": [
@@ -677,7 +677,7 @@
        "Text(0, 1, 'Density')"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -709,7 +709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "id": "5735e401",
    "metadata": {},
    "outputs": [
@@ -719,7 +719,7 @@
        "Text(0, 1, 'Density')"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -751,7 +751,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "id": "0242653a",
    "metadata": {},
    "outputs": [],
@@ -763,7 +763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "id": "3f21f9f9-4b91-45c2-90dd-34b1e1e4320f",
    "metadata": {},
    "outputs": [],
@@ -774,7 +774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "id": "92cec3a8",
    "metadata": {},
    "outputs": [],
@@ -803,7 +803,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "id": "bf0a4b5b-fa08-4c7c-a240-7353809b67a9",
    "metadata": {},
    "outputs": [
@@ -823,7 +823,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "id": "8966e691-14bb-4c04-8de3-880e5ccea5b6",
    "metadata": {},
    "outputs": [],
@@ -904,7 +904,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 28,
    "id": "1973aa36-189e-436d-9b18-add588b946aa",
    "metadata": {},
    "outputs": [
@@ -929,7 +929,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "id": "5e01aa9b-f7ef-4400-adcf-cee03b97bc0d",
    "metadata": {},
    "outputs": [
@@ -939,7 +939,7 @@
        "['ttbar', 'ztautau']"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -950,7 +950,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "id": "4de59bde-2332-4488-be38-62fae1ed4aca",
    "metadata": {},
    "outputs": [],
@@ -1014,7 +1014,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "id": "65de9378-0c65-4425-b21b-acef0d2a344f",
    "metadata": {
     "scrolled": true
@@ -1090,7 +1090,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "id": "25a6a41e",
    "metadata": {},
    "outputs": [
@@ -1182,7 +1182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
    "id": "25aba043",
    "metadata": {},
    "outputs": [
@@ -1241,7 +1241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 34,
    "id": "aad88322",
    "metadata": {},
    "outputs": [
@@ -1307,7 +1307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 35,
    "id": "891bd136-e59f-49a5-a853-073482a8e33a",
    "metadata": {},
    "outputs": [
@@ -1315,7 +1315,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "197/197 - 1s - 7ms/step\n",
+      "197/197 - 1s - 8ms/step\n",
       "197/197 - 1s - 7ms/step\n"
      ]
     }
