--- a/workshops/LPC_EFT_workshop_2025/Parameter_Fitting_with_Systematics.ipynb
+++ b/workshops/LPC_EFT_workshop_2025/Parameter_Fitting_with_Systematics.ipynb
@@ -15,26 +15,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "id": "c0e93500-7a31-4aed-8fec-876e95144d25",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/jsandesara_umass_edu/.conda/envs/NSBI/lib/python3.11/site-packages/nsbi_common_utils/plotting.py:11: FutureWarning: ``set_style`` is deprecated: Naming convention is changing to match mpl. Use ``mplhep.style.use()``.\n",
-      "  hep.set_style(\"ATLAS\")\n",
-      "2025-06-27 14:12:03.996558: I tensorflow/core/util/port.cc:153] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
-      "2025-06-27 14:12:04.027606: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:477] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
-      "WARNING: All log messages before absl::InitializeLog() is called are written to STDERR\n",
-      "E0000 00:00:1751033524.046900 1251501 cuda_dnn.cc:8310] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
-      "E0000 00:00:1751033524.052400 1251501 cuda_blas.cc:1418] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
-      "2025-06-27 14:12:04.070862: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
-      "To enable the following instructions: AVX2 AVX512F AVX512_VNNI FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os, sys, importlib\n",
     "\n",
@@ -68,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "id": "2911a387-09ea-44da-ad82-f19e960a9129",
    "metadata": {},
    "outputs": [],
@@ -79,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "id": "dfeaa3c6-560a-46fd-ac40-13ebb6877300",
    "metadata": {},
    "outputs": [
@@ -124,10 +108,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "b2b11240-e39f-43f8-971d-97a8424d7084",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_120/3818765506.py:12: FutureWarning: Series.ravel is deprecated. The underlying array is already 1D, so ravel is not necessary.  Use `to_numpy()` for conversion to a numpy array instead.\n",
+      "  weights_Asimov = jnp.array(dataset[mask_Asimov].weights.ravel())\n"
+     ]
+    }
+   ],
    "source": [
     "# Load the nominal dataset for evaluation\n",
     "dataset = pd.read_hdf(f\"{saved_data}dataset_preselected_nominal_SR.h5\", key=\"dataset\", mode='r')\n",
@@ -145,10 +138,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "15158bde-85fb-4cc8-8c4d-c6fae12bfe6e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[]\n"
+     ]
+    }
+   ],
    "source": [
     "path_to_dict_systs = f\"{saved_data}dict_systs.npy\"\n",
     "\n",
@@ -187,10 +188,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "e48019cd-27ca-468a-9c41-e5b15d03cfda",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['mu_higgs', 'mu_ttbar', 'mu_z']\n"
+     ]
+    }
+   ],
    "source": [
     "# Total number of unconstrained parameters in the model\n",
     "num_unconstrained_params = config[\"num_unconstrained_params\"]\n",
@@ -203,10 +212,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "c655a0d7-54a4-4bd5-961b-5bf07d7b1a66",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['htautau', 'ttbar', 'ztautau']\n",
+      "[]\n"
+     ]
+    }
+   ],
    "source": [
     "process_index = config[\"process_index\"]\n",
     "\n",
@@ -219,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 24,
    "id": "f0e20915",
    "metadata": {},
    "outputs": [],
@@ -235,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 25,
    "id": "680f8528-3083-4a0e-a657-476e83e9d06d",
    "metadata": {},
    "outputs": [],
@@ -251,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 26,
    "id": "f14e6af3-17ec-4823-9d78-5519585f5849",
    "metadata": {},
    "outputs": [],
@@ -276,20 +294,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 27,
    "id": "00b29c86-6ac0-426d-9d2d-94d33b4b31fa",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'SR': {'htautau': 844.6183, 'ttbar': 5317.6255, 'ztautau': 339302.88}, 'SR_binned': {'htautau': array([4.7001405], dtype=float32), 'ztautau': array([33.668922], dtype=float32), 'ttbar': array([1.3680663], dtype=float32)}, 'CR': {'htautau': array([3.4308802e-02, 1.9245273e+00, 1.4397985e+01, 1.4372072e+02],\n",
-      "      dtype=float32), 'ztautau': array([2.6406991e+00, 2.5416725e+02, 1.9917854e+04, 6.4259150e+05],\n",
-      "      dtype=float32), 'ttbar': array([  110.26796,  8016.983  , 20536.422  ,  9058.744  ], dtype=float32)}}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Build the \"observed\" histogram for an Asimov dataset\n",
     "hist_channels_data = {}\n",
@@ -307,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 28,
    "id": "c601bddb-0a0c-4336-9ebd-bdff9ded7782",
    "metadata": {},
    "outputs": [],
@@ -333,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 29,
    "id": "9a570cf3-e4e4-40c5-beb1-db9ff9b6ed15",
    "metadata": {},
    "outputs": [],
@@ -365,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 30,
    "id": "352172be-7ecc-4cb4-b471-3f7f6c3190cb",
    "metadata": {},
    "outputs": [
@@ -378,7 +386,7 @@
       "│                                Migrad                                   │\n",
       "├──────────────────────────────────┬──────────────────────────────────────┤\n",
       "│ FCN = -2.576e+07                 │         Nfcn = 68, Ngrad = 1         │\n",
-      "│ EDM = 5.07e-06 (Goal: 0.0002)    │            time = 1.7 sec            │\n",
+      "│ EDM = 5.07e-06 (Goal: 0.0002)    │            time = 1.6 sec            │\n",
       "├──────────────────────────────────┼──────────────────────────────────────┤\n",
       "│          Valid Minimum           │   Below EDM threshold (goal x 10)    │\n",
       "├──────────────────────────────────┼──────────────────────────────────────┤\n",
@@ -428,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 31,
    "id": "999ed18c",
    "metadata": {},
    "outputs": [
