--- a/workshops/LPC_EFT_workshop_2025/Neural_Likelihood_Ratio_Estimation.ipynb
+++ b/workshops/LPC_EFT_workshop_2025/Neural_Likelihood_Ratio_Estimation.ipynb
@@ -798,7 +798,7 @@
     "\n",
     "$$\\sum_c \\left[f_c(\\mu) \\cdot \\frac{p_c\\left(x\\right)}{p_{ref}(x)} \\right]= \\mu + \\frac{p_{t\\bar{t}}\\left(x\\right)}{p_{H \\to \\tau\\tau}(x)} + \\frac{p_{Z \\to \\tau\\tau}\\left(x\\right)}{p_{H \\to \\tau\\tau}(x)}$$\n",
     "\n",
-    "The task of estimating the $\\mu-$parameterized density ratio is thus reduced to estimating two $\\mu-$independent density ratios $\\frac{p_\\text{single top}}{p_{t\\bar{t}}}(x)$ and $\\frac{p_\\text{wjets}}{p_{t\\bar{t}}}(x)$ mixed together with an analytical parameterization (hence the name mixture model)."
+    "The task of estimating the $\\mu-$parameterized density ratio is thus reduced to estimating two $\\mu-$independent density ratios $\\frac{p_{t\\bar{t}}}{p_{H \\to \\tau\\tau}}(x)$ and $\\frac{p_{Z \\to \\tau\\tau}}{p_{H \\to \\tau\\tau}}(x)$ mixed together with an analytical parameterization (hence the name mixture model)."
    ]
   },
   {
