Added documentation to training class

--- a/FAIR_universe_Higgs_tautau/Parameter_Fitting_with_Systematics.ipynb
+++ b/FAIR_universe_Higgs_tautau/Parameter_Fitting_with_Systematics.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 57,
    "id": "c0e93500-7a31-4aed-8fec-876e95144d25",
    "metadata": {},
    "outputs": [],
@@ -53,7 +53,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 100,
+   "id": "f324e1f3-c29e-458b-b0e6-ad42cc9389ed",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'cpu'"
+      ]
+     },
+     "execution_count": 100,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "jax.default_backend()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
    "id": "2911a387-09ea-44da-ad82-f19e960a9129",
    "metadata": {},
    "outputs": [],
@@ -64,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 59,
    "id": "dfeaa3c6-560a-46fd-ac40-13ebb6877300",
    "metadata": {},
    "outputs": [
@@ -108,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 60,
    "id": "b2b11240-e39f-43f8-971d-97a8424d7084",
    "metadata": {},
    "outputs": [
@@ -138,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 61,
    "id": "15158bde-85fb-4cc8-8c4d-c6fae12bfe6e",
    "metadata": {},
    "outputs": [
@@ -146,7 +167,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[]\n"
+      "['TES', 'JES']\n"
      ]
     }
    ],
@@ -188,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 62,
    "id": "f0e9b1cb-f70c-4e05-8843-ef35c5494d72",
    "metadata": {},
    "outputs": [],
@@ -202,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 63,
    "id": "f0e20915",
    "metadata": {},
    "outputs": [],
@@ -218,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 64,
    "id": "680f8528-3083-4a0e-a657-476e83e9d06d",
    "metadata": {},
    "outputs": [],
@@ -234,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 65,
    "id": "31d38dda-bc18-4c2f-aa4b-db75561d79df",
    "metadata": {},
    "outputs": [],
@@ -245,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 66,
    "id": "a8ae6415-7f12-4dfb-b30c-e023601aea0a",
    "metadata": {},
    "outputs": [],
@@ -272,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 67,
    "id": "f14e6af3-17ec-4823-9d78-5519585f5849",
    "metadata": {},
    "outputs": [],
@@ -298,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 68,
    "id": "f7b73975-89b1-4c25-8f5b-0f7dd9920db1",
    "metadata": {},
    "outputs": [],
@@ -340,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 69,
    "id": "00b29c86-6ac0-426d-9d2d-94d33b4b31fa",
    "metadata": {},
    "outputs": [
@@ -367,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 70,
    "id": "d0636f68-84e7-40b3-96fc-283c3eba269a",
    "metadata": {},
    "outputs": [],
@@ -391,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 71,
    "id": "c601bddb-0a0c-4336-9ebd-bdff9ded7782",
    "metadata": {},
    "outputs": [],
@@ -426,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 72,
    "id": "28949ca9-f7b6-4733-88ce-2eb201593e74",
    "metadata": {},
    "outputs": [
@@ -451,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 109,
    "id": "9a570cf3-e4e4-40c5-beb1-db9ff9b6ed15",
    "metadata": {},
    "outputs": [],
@@ -481,9 +502,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 110,
    "id": "352172be-7ecc-4cb4-b471-3f7f6c3190cb",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -493,8 +516,8 @@
       " ┌─────────────────────────────────────────────────────────────────────────┐\n",
       "│                                Migrad                                   │\n",
       "├──────────────────────────────────┬──────────────────────────────────────┤\n",
-      "│ FCN = -2.575e+07                 │         Nfcn = 68, Ngrad = 1         │\n",
-      "│ EDM = 8.8e-06 (Goal: 0.0002)     │            time = 1.6 sec            │\n",
+      "│ FCN = -2.575e+07                 │        Nfcn = 122, Ngrad = 1         │\n",
+      "│ EDM = 4.47e-05 (Goal: 0.0002)    │           time = 43.5 sec            │\n",
       "├──────────────────────────────────┼──────────────────────────────────────┤\n",
       "│          Valid Minimum           │   Below EDM threshold (goal x 10)    │\n",
       "├──────────────────────────────────┼──────────────────────────────────────┤\n",
@@ -505,23 +528,29 @@
       "┌───┬──────────┬───────────┬───────────┬────────────┬────────────┬─────────┬─────────┬───────┐\n",
       "│   │ Name     │   Value   │ Hesse Err │ Minos Err- │ Minos Err+ │ Limit-  │ Limit+  │ Fixed │\n",
       "├───┼──────────┼───────────┼───────────┼────────────┼────────────┼─────────┼─────────┼───────┤\n",
-      "│ 0 │ mu_higgs │   0.97    │   0.27    │            │            │         │         │       │\n",
-      "│ 1 │ mu_ttbar │   1.005   │   0.007   │            │            │         │         │       │\n",
-      "│ 2 │ mu_z     │  0.9998   │  0.0010   │            │            │         │         │       │\n",
+      "│ 0 │ mu_higgs │   0.81    │   0.27    │            │            │         │         │       │\n",
+      "│ 1 │ mu_ttbar │   1.007   │   0.007   │            │            │         │         │       │\n",
+      "│ 2 │ mu_z     │  0.9999   │  0.0010   │            │            │         │         │       │\n",
+      "│ 3 │ TES      │   0.031   │   0.014   │            │            │         │         │       │\n",
+      "│ 4 │ JES      │   0.020   │   0.027   │            │            │         │         │       │\n",
       "└───┴──────────┴───────────┴───────────┴────────────┴────────────┴─────────┴─────────┴───────┘\n",
-      "┌──────────┬────────────────────────────┐\n",
-      "│          │ mu_higgs mu_ttbar     mu_z │\n",
-      "├──────────┼────────────────────────────┤\n",
-      "│ mu_higgs │   0.0701 -0.24e-3 -59.2e-6 │\n",
-      "│ mu_ttbar │ -0.24e-3 5.06e-05  -0.9e-6 │\n",
-      "│     mu_z │ -59.2e-6  -0.9e-6  1.1e-06 │\n",
-      "└──────────┴────────────────────────────┘\n"
+      "┌──────────┬──────────────────────────────────────────────┐\n",
+      "│          │ mu_higgs mu_ttbar     mu_z      TES      JES │\n",
+      "├──────────┼──────────────────────────────────────────────┤\n",
+      "│ mu_higgs │    0.074 -0.31e-3 -60.0e-6 -0.52e-3  -1.4e-3 │\n",
+      "│ mu_ttbar │ -0.31e-3  5.2e-05  -0.9e-6  0.01e-3  0.03e-3 │\n",
+      "│     mu_z │ -60.0e-6  -0.9e-6  1.1e-06   0.3e-6   0.3e-6 │\n",
+      "│      TES │ -0.52e-3  0.01e-3   0.3e-6 0.000182 -0.06e-3 │\n",
+      "│      JES │  -1.4e-3  0.03e-3   0.3e-6 -0.06e-3 0.000718 │\n",
+      "└──────────┴──────────────────────────────────────────────┘\n"
      ]
     }
    ],
    "source": [
     "# Perform fit while floating all the NPs\n",
+    "# inference_full.perform_fit(fit_strategy=2, freeze_params=['TES', 'JES'])\n",
     "# inference_full.perform_fit(fit_strategy=2, freeze_params=['TES'])\n",
+    "# inference_full.perform_fit(fit_strategy=2, freeze_params=['JES'])\n",
     "inference_full.perform_fit(fit_strategy=2)"
    ]
   },
